[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/NPC.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 28 )

[node name="NPC" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -16, 4 )
shape = SubResource( 1 )

[node name="TextBox" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -176.0
margin_top = -136.0
margin_right = 40.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextBox"]
margin_right = 216.0
margin_bottom = 104.0
text = "Help us! The water tower broke and now everything is dying! The people are dehydrated and are trying to get any form of liquid they can! They will drink your blood! AAAAAAAAAAAAAAAA!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
